--- a/Pages/HomePage/Home.cshtml
+++ b/Pages/HomePage/Home.cshtml
@@ -20,8 +20,8 @@
         <div class="navbar-logo">Elevate Gym</div>
         <div class="navbar-links">
             <a href="/HomePage/Home">Home</a>
-            <a href="/UserPage/AddMyMembership">Register My Membership</a>
-            <a href="/UserPage/ViewMyMembership">View My Membership</a>
+            <a href="/AddMyMembership/AddMyMembership">Register My Membership</a>
+            <a href="/ViewMyMembership/ViewMyMembership">View My Membership</a>
         </div>
     </nav>
 
@@ -29,7 +29,7 @@
     <div class="top-image-container">
         <img src="/images/Home.png" alt="Top Image" class="top-image" />
         <div class="join-button-container">
-            <a href="/UserPage/AddMyMembership" class="join-button">Join Today</a>
+            <a href="/AddMyMembership/AddMyMembership" class="join-button">Join Today</a>
         </div>
     </div>
 
@@ -41,8 +41,17 @@
         </div>
         <div class="text-content">
             <h2>About Elevate Gym</h2>
-            <p>Elevate Gym is a state-of-the-art fitness facility...</p>
-            <p>Join us today and elevate your fitness journey!</p>
+            <p>
+                Elevate Gym is a state-of-the-art fitness facility
+                that offers a wide range of classes and services to help you achieve your fitness goals.
+                Our experienced trainers are dedicated to providing you with the best possible experience,
+                and our modern equipment is designed to help you get the most out of your workout.
+            </p>
+            <p>
+                Whether you're a beginner or a pro, our experienced trainers will
+                guide you every step of the way. Join us today and elevate your
+                fitness journey!
+            </p>
         </div>
     </div>
 
