--- a/Pages/ViewSchedule/ViewSchedule.cshtml
+++ b/Pages/ViewSchedule/ViewSchedule.cshtml
@@ -7,13 +7,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/css/PagesCSS/ViewSchedule.css" />
     <link rel="stylesheet" href="~/css/App.css" />
 </head>
-
 <body class="container">
     <h1>Activity Schedules</h1>
 
@@ -59,8 +58,6 @@
         <p>No schedules available.</p>
     }
 
-    <button class="back-button" onclick="location.href='/';">
-        Back to Homepage
-    </button>
+    <button class="back-button" onclick="location.href='/'">Back to Homepage</button>
 </body>
 </html>
