--- a/Pages/PaymentPage/PaymentPage.cshtml
+++ b/Pages/PaymentPage/PaymentPage.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
-@model YourNamespace.Pages.UserPage.PaymentPageModel
+@model PaymentPageModel
 @{
     ViewData["Title"] = "Credit Card Payment";
 }
 
-<link rel="stylesheet" href="~/css/PaymentPageStyles.css" />
+<link rel="stylesheet" href="/css/PagesCSS/PaymentPage.css" />
 
 <div class="paymentForm">
     <form method="post">
