--- a/Pages/ViewActivities/ViewActivities.cshtml
+++ b/Pages/ViewActivities/ViewActivities.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model GymSystem.Pages.ViewActivities.ViewActivitiesModel
+@model ViewActivitiesModel
 @{
     ViewData["Title"] = "View Activities";
 }
