--- a/Pages/ViewMyMembership/ViewMyMembership.cshtml
+++ b/Pages/ViewMyMembership/ViewMyMembership.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model GymSystem.Pages.ViewMyMembership.ViewMyMembershipModel
+@model ViewMyMembershipModel
 @{
     ViewData["Title"] = "View My Membership";
 }
