--- a/Pages/ViewSchedule/ViewSchedule.cshtml
+++ b/Pages/ViewSchedule/ViewSchedule.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model GymSystem.Pages.ViewSchedule.ViewScheduleModel
+@model ViewScheduleModel
 @{
     ViewData["Title"] = "Activity Schedules";
 }
